# exercise-mlops

./: .flake8  Dockerfile  model_io.py  pipeline.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  python-tests.yml
exercise.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
exercise_pkg/: model_io.py  pipeline.py
tests/: .coverage  test_basic.py  test_model_io.py  test_pipeline.py
